--- a/package.json
+++ b/package.json
@@ -18,33 +18,39 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@storybook/addon-essentials": "^7.4.3",
-        "@storybook/addon-interactions": "^7.4.3",
-        "@storybook/addon-links": "^7.4.3",
+        "@storybook/addon-essentials": "^7.4.4",
+        "@storybook/addon-interactions": "^7.4.4",
+        "@storybook/addon-links": "^7.4.4",
         "@storybook/addon-onboarding": "^1.0.8",
-        "@storybook/blocks": "^7.4.3",
-        "@storybook/builder-vite": "^7.4.3",
-        "@storybook/react": "^7.4.3",
-        "@storybook/react-vite": "^7.4.3",
+        "@storybook/blocks": "^7.4.4",
+        "@storybook/builder-vite": "^7.4.4",
+        "@storybook/react": "^7.4.4",
+        "@storybook/react-vite": "^7.4.4",
         "@storybook/testing-library": "^0.2.1",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
-        "@types/react": "^18.2.15",
+        "@types/react": "^18.2.22",
         "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.7.2",
+        "@typescript-eslint/parser": "^6.7.2",
+        "@vanilla-extract/recipes": "^0.5.0",
         "@vanilla-extract/vite-plugin": "^3.9.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "chromatic": "^7.2.0",
-        "eslint": "^8.45.0",
+        "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "eslint-plugin-storybook": "^0.6.14",
-        "happy-dom": "^12.1.5",
+        "eslint-plugin-unused-imports": "^3.0.0",
+        "happy-dom": "^12.1.6",
         "hygen": "^6.2.11",
-        "storybook": "^7.4.3",
-        "typescript": "^5.0.2",
-        "vite": "^4.4.5",
+        "storybook": "^7.4.4",
+        "typescript": "^5.2.2",
+        "vite": "^4.4.9",
         "vitest": "^0.34.5"
     }
 }
