--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@vanilla-extract/vite-plugin": "^3.9.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "chromatic": "^7.2.0",
+        "cspell": "^7.3.6",
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.28.1",
