--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
+        "commitlint": "commitlint -e $GIT_PARAMS",
+        "lint:precommit": "eslint 'src/**/*.{ts,tsx}' --report-unused-disable-directives --max-warnings 0",
+        "fmt:precommit": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss}'",
+        "cspell:check": "cspell -c ./cspell.config.json \"./src/**/*\" --unique --no-progress --no-summary",
+        "markuplint:check": "markuplint -p \"./src/**/*.tsx\"",
+        "test:check": "vitest run --passWithNoTests",
+        "check": "run-p *:check",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
-        "new:ui": "hygen generator ui",
-        "test": "vitest"
+        "new:ui": "hygen generator ui"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,tsx}": "pnpm run lint:precommit",
+        "src/**/*.{js,jsx,ts,tsx,json,css,scss}": "pnpm run fmt:precommit"
     },
     "dependencies": {
         "@vanilla-extract/css": "^1.13.0",
@@ -51,12 +58,13 @@
         "eslint-plugin-react-refresh": "^0.4.3",
         "eslint-plugin-storybook": "^0.6.14",
         "eslint-plugin-unused-imports": "^3.0.0",
-        "happy-dom": "^12.1.6",
+        "husky": "^8.0.3",
         "hygen": "^6.2.11",
         "jest-dom": "^4.0.0",
         "jsdom": "^22.1.0",
         "lint-staged": "^14.0.1",
         "markuplint": "^3.12.1",
+        "npm-run-all": "^4.1.5",
         "storybook": "^7.4.4",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
