chore: add workflow

--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
         "vitest": "^0.34.5"
+    },
+    "volta": {
+        "node": "20.7.0",
+        "pnpm": "8.7.6"
     }
 }
