--- a/cspell.config.json
+++ b/cspell.config.json
@@ -11,7 +11,8 @@
         "datetime",
         "hygen",
         "markuplint",
-        "precommit"
+        "precommit",
+        "volta"
     ],
     "ignorePaths": []
     // flagWords - list of words to be always considered incorrect
