--- a/package.json
+++ b/package.json
@@ -1,87 +1,90 @@
 {
-    "name": "fragment-ui",
-    "private": true,
-    "version": "0.0.0",
-    "scripts": {
-        "commitlint": "commitlint -e $GIT_PARAMS",
-        "check:lint": "eslint 'src/**/*.{ts,tsx}' --report-unused-disable-directives --max-warnings 0",
-        "fmt": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss}'",
-        "check:cspell": "cspell -c ./cspell.config.json \"./src/**/*\" --unique --no-progress --no-summary",
-        "check:markuplint": "markuplint -p \"./src/**/*.tsx\"",
-        "test:unit": "vitest run --passWithNoTests",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "check": "run-p check:* test:*",
-        "ci:test-group": "run-p test:*",
-        "ci:check": "run-p check:*",
-        "new:ui": "hygen generator ui"
-    },
-    "lint-staged": {
-        "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
-            "pnpm check:lint --fix",
-            "pnpm fmt"
-        ]
-    },
-    "dependencies": {
-        "@vanilla-extract/css": "^1.13.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^17.7.1",
-        "@commitlint/config-conventional": "^17.7.0",
-        "@markuplint/jsx-parser": "^3.9.1",
-        "@markuplint/react-spec": "^3.10.1",
-        "@semantic-release/changelog": "^6.0.3",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^9.0.6",
-        "@storybook/addon-essentials": "^7.4.4",
-        "@storybook/addon-interactions": "^7.4.4",
-        "@storybook/addon-links": "^7.4.4",
-        "@storybook/addon-onboarding": "^1.0.8",
-        "@storybook/blocks": "^7.4.4",
-        "@storybook/builder-vite": "^7.4.4",
-        "@storybook/react": "^7.4.4",
-        "@storybook/react-vite": "^7.4.4",
-        "@storybook/testing-library": "^0.2.1",
-        "@testing-library/jest-dom": "^6.1.3",
-        "@testing-library/react": "^14.0.0",
-        "@types/react": "^18.2.22",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.7.2",
-        "@typescript-eslint/parser": "^6.7.2",
-        "@vanilla-extract/recipes": "^0.5.0",
-        "@vanilla-extract/vite-plugin": "^3.9.0",
-        "@vitejs/plugin-react-swc": "^3.3.2",
-        "chromatic": "^7.2.0",
-        "cspell": "^7.3.6",
-        "eslint": "^8.50.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "eslint-plugin-storybook": "^0.6.14",
-        "eslint-plugin-unused-imports": "^3.0.0",
-        "husky": "^8.0.3",
-        "hygen": "^6.2.11",
-        "jest-dom": "^4.0.0",
-        "jsdom": "^22.1.0",
-        "lint-staged": "^14.0.1",
-        "markuplint": "^3.12.1",
-        "npm-run-all": "^4.1.5",
-        "semantic-release": "^22.0.4",
-        "storybook": "^7.4.4",
-        "typescript": "^5.2.2",
-        "vite": "^4.4.9",
-        "vitest": "^0.34.5"
-    },
-    "volta": {
-        "node": "20.7.0",
-        "pnpm": "8.7.6"
-    },
-    "publishConfig": {
-        "@tosaken1116:registry": "https://npm.pkg.github.com"
-    }
+  "name": "fragment-ui",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "commitlint": "commitlint -e $GIT_PARAMS",
+    "check:lint": "eslint 'src/**/*.{ts,tsx}' --report-unused-disable-directives --max-warnings 0",
+    "fmt": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss}'",
+    "check:cspell": "cspell -c ./cspell.config.json \"./src/**/*\" --unique --no-progress --no-summary",
+    "check:markuplint": "markuplint -p \"./src/**/*.tsx\"",
+    "test:unit": "vitest run --passWithNoTests",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "check": "run-p check:* test:*",
+    "ci:test-group": "run-p test:*",
+    "ci:check": "run-p check:*",
+    "new:ui": "hygen generator ui",
+    "chromatic": "npx chromatic --project-token=chpt_1626b8783bae6ea"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
+      "pnpm check:lint --fix",
+      "pnpm fmt"
+    ]
+  },
+  "dependencies": {
+    "@vanilla-extract/css": "^1.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@markuplint/jsx-parser": "^3.9.1",
+    "@markuplint/react-spec": "^3.10.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.0.6",
+    "@storybook/addon-essentials": "^7.4.4",
+    "@storybook/addon-interactions": "^7.4.4",
+    "@storybook/addon-links": "^7.4.4",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.4",
+    "@storybook/builder-vite": "^7.4.4",
+    "@storybook/react": "^7.4.4",
+    "@storybook/react-vite": "^7.4.4",
+    "@storybook/testing-library": "^0.2.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "@vanilla-extract/recipes": "^0.5.0",
+    "@vanilla-extract/vite-plugin": "^3.9.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "chromatic": "^7.2.0",
+    "cspell": "^7.3.6",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^0.6.14",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
+    "hygen": "^6.2.11",
+    "jest-dom": "^4.0.0",
+    "jsdom": "^22.1.0",
+    "lint-staged": "^14.0.1",
+    "markuplint": "^3.12.1",
+    "npm-run-all": "^4.1.5",
+    "semantic-release": "^22.0.4",
+    "storybook": "^7.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.5"
+  },
+  "volta": {
+    "node": "20.7.0",
+    "pnpm": "8.7.6"
+  },
+  "publishConfig": {
+    "@tosaken1116:registry": "https://npm.pkg.github.com"
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "fragment-ui@0.0.0"
 }
