--- a/.github/workflows/chromatic_deploy.yml
+++ b/.github/workflows/chromatic_deploy.yml
@@ -1,7 +1,9 @@
 name: "Chromatic"
 
 # Event for the workflow
-on: push
+on:
+    pull_request:
+        types: [opened, synchronize, reopened, ready_for_review]
 
 # List of jobs
 jobs:
@@ -12,10 +14,12 @@ jobs:
         # Job steps
         steps:
             - uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
             - name: Setup
               uses: ./.github/actions/pnpm
 
-            - id: react
+            - name: deploy
               uses: chromaui/action@v1
               # Chromatic GitHub Action options
               with:
